--- a/index.html
+++ b/index.html
@@ -43,15 +43,16 @@
         <div class="item vertical"><img src="./images/cat12.jpg" /></div>
         <div class="item horizontal"><img src="./images/cat3.jpg" /></div>
         <div class="item horizontal"><img src="./images/cat6.jpg" /></div>
-        <div class="item vertical"><img src="./images/cat7.jpg" /></div>
-        <div class="item horizontal"><img src="./images/cat8.jpg" /></div>
         <div class="item vertical"><img src="./images/cat9.jpg" /></div>
+        <div class="item horizontal"><img src="./images/cat8.jpg" /></div>
+        <div class="item vertical"><img src="./images/silvestre.jpeg" /></div>
         <div class="item horizontal"><img src="./images/cat2.jpg" /></div>
         <div class="item vertical"><img src="./images/cat4.jpg" /></div>
         <div class="item vertical"><img src="./images/cat10.jpg" /></div>
         <div class="item vertical"><img src="./images/cat5.jpg" /></div>
         <div class="item vertical"><img src="./images/cat11.jpg" /></div>
         <div class="item horizontal"><img src="./images/cat1.jpg" /></div>
+        <div class="item vertical"><img src="./images/cat7.jpg" /></div>
         <div class="item vertical"><img src="./images/cat12.jpg" /></div>
         <div class="item horizontal"><img src="./images/cat3.jpg" /></div>
         <div class="item horizontal"><img src="./images/cat6.jpg" /></div>
